fix background color on color text to make it more readable

--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ body {
     color: rgba(255, 255, 255, .8);
 	font-family: "Fira Mono", monospace;
 	text-shadow: 2px 4px 8px rgba(0, 0, 0, 0.2);
-    background-color: rgba(0, 0, 0, .1);
+    background-color: rgba(0, 0, 0, .2);
     padding: .5rem 1rem;
 }
 
